force-app/main/default/src/objects/HealthCloudGA__EhrImmunizationReaction__c/HealthCloudGA__EhrImmunizationReaction__c.object-meta.xml
<CustomObject>
    <label>EHR Immunization Reaction</label>
    <nameField>
        <displayFormat>Reac-{0}</displayFormat>
        <label>EHR Immunization Reaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Immunization Reactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>