force-app/main/default/src/objects/HealthCloudGA__EhrImmunizationReaction__c/fields/HealthCloudGA__EhrObservation__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__EhrObservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EHR Observation</label>
    <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
    <relationshipLabel>EHR Immunization Reactions</relationshipLabel>
    <relationshipName>ImmunizationReactions</relationshipName>
    <type>Lookup</type>
</CustomField>