force-app/main/default/src/objects/HealthCloudGA__EhrImmunizationReaction__c/fields/HealthCloudGA__Immunization__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Immunization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Immunization</label>
    <referenceTo>HealthCloudGA__EhrImmunization__c</referenceTo>
    <relationshipLabel>Immunization Reactions</relationshipLabel>
    <relationshipName>ImmunizationReactions</relationshipName>
    <type>Lookup</type>
</CustomField>