force-app/main/default/src/objects/HealthCloudGA__EhrImmunizationReaction__c/fields/HealthCloudGA__Reaction255__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Reaction255__c</fullName>
    <description>Details of a reaction that follows immunization</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reaction 255</label>
    <length>255</length>
    <type>Text</type>
</CustomField>