force-app/main/default/src/objects/HealthCloudGA__EhrImmunizationReaction__c/fields/HealthCloudGA__SelfReported__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SelfReported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was reaction self-reported?</description>
    <label>Self Reported</label>
    <type>Checkbox</type>
</CustomField>